cargo-features = ["strip"]

[package]
name = "mags_game"
version = "0.1.0"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
fnv = "1.0.7"
lazy_static = "1.4.0"
raylib = "3.5.0"
